new quant update method working for buttons

--- a/index.html
+++ b/index.html
@@ -64,24 +64,24 @@
                         <select>
                             <option value="mask" selected></option>
                         </select>
-                        <button class="add-to-cart" type="submit" id="mask">Add to cart</button>
+                        <button class="add-to-cart" type="submit" value="mask">Add to cart</button>
                     </form>
 
                     <ul class="edit-quantity">
                         <li>
                             <form action="" class="minus-form">
-                                <button class="subtract" id="mask"> – </button>
+                                <button class="subtract" value="mask"> – </button>
                             </form>
                         </li>
                         <li>
                             <form action="" class="quantity-form">
                                 <label for="quantity" class="sr-only">Quantity</label>
-                                <input type="text" name="quantity" placeholder="1" class="mask"  id="quantity" value="1">
+                                <input type="text" name="quantity" placeholder="1" class="mask"  id="quantity" value="0">
                             </form>
                         </li>
                         <li>
                             <form action="" class="addition-form">
-                                <button class="add" id="mask"> + </button>
+                                <button class="add" value="mask"> + </button>
                             </form>
                         </li>
                     </ul>
@@ -100,24 +100,24 @@
                         <select>
                             <option value="sani" selected></option>
                         </select>
-                        <button class="add-to-cart" type="submit" id="sani">Add to cart</button>
+                        <button class="add-to-cart" type="submit" value="sani">Add to cart</button>
                     </form>
                 
                     <ul class="edit-quantity">
                         <li>
                             <form action="" class="minus-form">
-                                <button class="subtract" id="sani"> – </button>
+                                <button class="subtract" value="sani"> – </button>
                             </form>
                         </li>
                         <li>
                             <form action="" class="quantity-form" id="sani">
                                 <label for="quantity" class="sr-only">Quantity</label>
-                                <input type="text" name="quantity" placeholder="1" class="sani"  id="quantity" value="1">
+                                <input type="text" name="quantity" placeholder="1" class="sani"  id="quantity" value="0">
                             </form>
                         </li>
                         <li>
                             <form action="" class="addition-form">
-                                <button class="add" id="sani"> + </button>
+                                <button class="add" value="sani"> + </button>
                             </form>
                         </li>
                     </ul>
@@ -136,25 +136,25 @@
                         <select>
                             <option value="tp" selected></option>
                         </select>
-                        <button class="add-to-cart" type="submit" id="tp">Add to cart</button>
+                        <button class="add-to-cart" type="submit" value="tp">Add to cart</button>
                     </form>
                     
                     <ul class="edit-quantity">
                         <li>
                             <form action="" class="minus-form">
-                                <button class="subtract" id="tp"> – </button>
+                                <button class="subtract" value="tp"> – </button>
                             </form>
                         </li>
                         <li>
                             <form action="" class="quantity-form">
                                 <label for="quantity" class="sr-only">Quantity</label>
                                 <input type="text" name="quantity" placeholder="1" class="tp"
-                                id="quantity" value="1">
+                                id="quantity" value="0">
                             </form>
                         </li>
                         <li>
                             <form action="" class="addition-form">
-                                <button class="add" id="tp"> + </button>
+                                <button class="add" value="tp"> + </button>
                             </form>
                         </li>
                     </ul>
