hide and display buttons works functionally but not prettily

--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
                     <p>$10</p>
 
                     <!-- FORMS START  -->
-                    <form action="" class="order-form">
+                    <form action="" class="order-form mask">
                         <select>
                             <option value="mask" selected></option>
                         </select>
                         <button class="add-to-cart" type="submit" value="mask">Add to cart</button>
                     </form>
 
-                    <ul class="edit-quantity">
+                    <ul class="edit-quantity mask">
                         <li>
                             <form action="" class="minus-form">
                                 <button class="subtract" value="mask"> – </button>
@@ -96,14 +96,14 @@
                     <p>$3</p>
 
                     <!-- FORM START  -->
-                    <form action="" class="order-form">
+                    <form action="" class="order-form sani">
                         <select>
                             <option value="sani" selected></option>
                         </select>
                         <button class="add-to-cart" type="submit" value="sani">Add to cart</button>
                     </form>
                 
-                    <ul class="edit-quantity">
+                    <ul class="edit-quantity sani">
                         <li>
                             <form action="" class="minus-form">
                                 <button class="subtract" value="sani"> – </button>
@@ -132,14 +132,14 @@
                     <p>$8</p>
 
                     <!-- FORMS START  -->
-                    <form action="" class="order-form">
+                    <form action="" class="order-form tp">
                         <select>
                             <option value="tp" selected></option>
                         </select>
                         <button class="add-to-cart" type="submit" value="tp">Add to cart</button>
                     </form>
                     
-                    <ul class="edit-quantity">
+                    <ul class="edit-quantity tp">
                         <li>
                             <form action="" class="minus-form">
                                 <button class="subtract" value="tp"> – </button>
