hide and display buttons works functionally but not prettily (more so)

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                 <li class="mask">
                     <img src="./assets/bara-buri-1NPbmHxl_VE-unsplash.jpg" alt="" title="Photo by Bára Buri on Unsplash"></a>
-                    <div class="item-desc">Mask</div>
+                    <div class="item-desc">Face mask</div>
                     <p>$10</p>
 
                     <!-- FORMS START  -->
@@ -128,7 +128,7 @@
 
                 <li class="tp">
                     <img src="./assets/pexels-vie-studio-3963080-cropped.jpg" alt="" title="Photo by Vie Studio from Pexels">
-                    <div class="item-desc">Toilet Paper</div>
+                    <div class="item-desc">Toilet Paper Roll</div>
                     <p>$8</p>
 
                     <!-- FORMS START  -->
