desktop perfect, mobile could use some work

--- a/index.html
+++ b/index.html
@@ -36,10 +36,14 @@
                 </ul>
             </div>
             <div class="cart-box">
-                <span class="current-cart-total-items"></span>
-                <i class="fas fa-shopping-cart"></i>
-                Your current total is:
-                <span class="current-cart-total-cost"></span>
+                <div class="cart-items-box">
+                    <i class="fas fa-shopping-cart"></i>
+                    <span class="current-cart-total-items"></span>
+                </div>
+                <div class="cart-total-box">
+                    Your total:
+                    <span class="current-cart-total-cost"></span>
+                </div>
             </div>
         </nav>
 
@@ -50,7 +54,7 @@
 
             <h1>The COVID Store</h1>
 
-            <h2>All You Need For *~These Unprecedented Times~*</h2>
+            <h2>Supplies For These Times</h2>
 
             <ul class="item-display">
 
