mobile display good

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
                     <div class="order-table">
                         <ul class="table-headings">
-                            <li class="qty-col"><label for="qty">Qty.</label></li>
+                            <li class="qty-col"><label for="qty"></label></li>
                             <li class="item-col-top">Item</li>
                             <li class="price-col">Price</li>
                         </ul>
@@ -197,17 +197,23 @@
 
                 <div class="order-info">
 
-                    <figure class="address">
-                        <h3>Address</h3>
-                        <p>123 Some St</p>
-                        <button class="address">Change</button>
-                    </figure>
+                    <div class="editable-info">
 
-                    <figure class="credit-card">
-                        <h3>Credit Card</h3>
-                        <p>Ends with 1234</p>
-                        <button class="credit">Change</button>
-                    </figure>
+                        <figure class="address">
+                            <h3>Address</h3>
+                            <p>123 Some St</p>
+                            <p>Toronto, ON</p>
+                            <p>M5T17L</p>
+                            <button class="address">Change</button>
+                        </figure>
+
+                        <figure class="credit-card">
+                            <h3>Credit Card</h3>
+                            <p>Ends with 1234</p>
+                            <button class="credit">Change</button>
+                        </figure>
+
+                    </div>
 
                     <button class="confirm-order forward-flow">Confirm Order</button>
 
