--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <ul class="item-display">
 
                 <li class="mask">
-                    <img src="./assets/bara-buri-1NPbmHxl_VE-unsplash.jpg" alt="" title="Photo by Bára Buri on Unsplash"></a>
+                    <img src="./assets/bara-buri-1NPbmHxl_VE-unsplash.jpg" alt="a face mask with plant sprigs" title="Photo by Bára Buri on Unsplash"></a>
                     <div class="item-desc">Face mask</div>
                     <p>$10</p>
 
@@ -95,7 +95,7 @@
                 </li>
 
                 <li class="sani">
-                    <img src="./assets/pexels-katie-harp-4998548-cropped.jpg" alt="" title="Photo by Katie Harp from Pexels">
+                    <img src="./assets/pexels-katie-harp-4998548-cropped.jpg" alt="a small bottle of hand sanitizer" title="Photo by Katie Harp from Pexels">
                     <div class="item-desc">Hand Sanitizer</div>
                     <p>$3</p>
 
@@ -131,7 +131,7 @@
                 </li>
 
                 <li class="tp">
-                    <img src="./assets/pexels-vie-studio-3963080-cropped.jpg" alt="" title="Photo by Vie Studio from Pexels">
+                    <img src="./assets/pexels-vie-studio-3963080-cropped.jpg" alt="three rolls of toilet paper with a plant sprig" title="Photo by Vie Studio from Pexels">
                     <div class="item-desc">Toilet Paper Roll</div>
                     <p>$8</p>
 
